src/objects/Support_Request_Preparation__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Support_Request__c</fullName>
        <label>Sales Support Request</label>
        <referenceTo>Sales_Support_Request__c</referenceTo>
        <relationshipLabel>Preparations</relationshipLabel>
        <relationshipName>Preparations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Preparations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preparation</label>
    <nameField>
        <label>Preparation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preparations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>